tests/ui/generics/issue-83556.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/issue-83556.rs:1:15
   |
LL | struct Foo<T, 'a>(&'a ());
   |               ^^
   |
help: reorder the parameters: lifetimes, then consts and types
   |
LL | struct Foo<'a, T>(&'a ());
   |           ~~~~~~~

error: aborting due to 1 previous error

